--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.slide-enter {
+    opacity: 0;
+    transform: translatex(100%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.slide-enter-active {
+    opacity: 1;
+    transform: translatex(0%);
+    transition: opacity 200ms, transform 200ms;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.slide-exit {
+    opacity: 1;
+    transform: translatex(0%);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.slide-exit-active {
+    opacity: 0;
+    transform: translatex(100%);
+    transition: opacity 200ms, transform 200ms;
 }
